# book-library

./: README.md  development.md  docker-compose.yml  pyproject.toml
admin_service/: Dockerfile  README.Docker.md  README.md  pyproject.toml
admin_service/alembic/: env.py
admin_service/alembic/versions/: 4a094f813792_removed_book_author_id_field.py  ce3c092243e2_add_user_and_book_model.py
admin_service/app/: events.py  main.py  models.py  pagination.py  prestart.py
admin_service/app/api/: deps.py  main.py
admin_service/app/core/: config.py  db.py
admin_service/scripts/: prestart.sh
admin_service/tests/: conftest.py
app/core/: config.py
auth_service/: .gitignore  Dockerfile  README.md  pyproject.toml
auth_service/alembic/: env.py
auth_service/app/: crud.py  events.py  main.py  models.py
auth_service/scripts/: prestart.sh
auth_service/tests/: conftest.py
frontend_service/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
frontend_service/alembic/: env.py
frontend_service/alembic/versions/: 0ccc990d22c4_remove_book_author_id.py  75a18b16313d_add_user_and_book_model.py  e4289a747ca0_add_is_active_field_to_user.py
frontend_service/app/: events.py  main.py  models.py
frontend_service/app/api/: deps.py  main.py
frontend_service/app/api/routes/: book.py  user.py
frontend_service/app/core/: config.py  security.py
frontend_service/tests/api/: test_books.py  test_users.py
scripts/: prestart.sh
user_service/: main.py  models.py  pyproject.toml
user_service/alembic/: env.py
user_service/app/: crud.py
(+23 files in other folders)
