[project]
name = "frontend-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "jwt>=1.3.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.23",
    "starlette>=0.46.0",
]
